tests/snapshots/uf5-218_first_10/tests__uf50-08_stderr.snap
---
source: tests/tests.rs
expression: stderr
---
Interactions
  Total           40_391_189
    Depth         17_665_730
    Breadth                2
  Annihilate      22_752_779
  Commute             75_637
  Copy             3_815_919
  Erase            4_647_352
  Expand           3_250_610
  Call             3_724_515
  Branch           2_124_377

Memory
  Heap               685_728 B
  Allocated      894_942_192 B
  Freed          894_942_192 B

[Performance...]
