tests/snapshots/uf5-218_first_10/tests__uf50-08_stdout.snap
---
source: tests/tests.rs
expression: stdout
---
satisfiable
evaluation under model: true
var 1 = true
var 2 = false
var 3 = false
var 4 = false
var 5 = false
var 6 = true
var 7 = false
var 8 = true
var 9 = true
var 10 = true
var 11 = true
var 12 = true
var 13 = true
var 14 = false
var 15 = false
var 16 = true
var 17 = false
var 19 = true
var 20 = false
var 21 = false
var 22 = true
var 23 = false
var 24 = false
var 25 = true
var 26 = true
var 27 = false
var 28 = true
var 29 = false
var 30 = true
var 31 = true
var 32 = true
var 33 = true
var 34 = false
var 35 = false
var 36 = false
var 37 = false
var 38 = false
var 39 = false
var 40 = true
var 41 = true
var 42 = true
var 43 = false
var 44 = false
var 45 = false
var 46 = false
var 47 = false
var 48 = true
var 49 = true
var 50 = true
