tests/snapshots/uf5-218_first_10/tests__uf50-09.snap
---
source: tests/tests.rs
info:
  program: vine
  args:
    - run
    - dpll/main.vi
    - "--breadth-first"
---
success: true
exit_code: 0
----- stdout -----
satisfiable
evaluation under model: true
var 1 = false
var 2 = true
var 3 = true
var 4 = false
var 5 = false
var 6 = true
var 7 = false
var 8 = false
var 9 = false
var 10 = false
var 11 = true
var 12 = true
var 13 = true
var 14 = false
var 15 = true
var 17 = true
var 18 = false
var 19 = false
var 20 = false
var 21 = false
var 22 = false
var 23 = false
var 24 = true
var 25 = false
var 26 = true
var 27 = false
var 28 = true
var 29 = true
var 30 = true
var 31 = true
var 32 = false
var 33 = false
var 34 = false
var 35 = false
var 36 = true
var 37 = false
var 38 = true
var 39 = true
var 40 = false
var 41 = true
var 42 = true
var 43 = true
var 44 = true
var 45 = false
var 46 = false
var 47 = false
var 48 = true
var 49 = true
var 50 = false

----- stderr -----

Interactions
  Total           79_334_541
    Depth         34_870_438
    Breadth                2
  Annihilate      45_017_382
  Commute            131_027
  Copy             7_431_053
  Erase            8_977_415
  Expand           6_321_043
  Call             7_293_415
  Branch           4_163_206

Memory
  Heap               615_920 B
  Allocated    1_766_283_072 B
  Freed        1_766_283_072 B

[Performance...]
